style.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  
}

body {
  font-family: 'Open Sans', sans-serif;
  background: #333;
  color: #333;
  line-height: 1.6;
}

#body-container { max-width: 900px; margin:auto; }

ul {
  list-style: none;
}

a {
  color: coral;
  text-decoration: none;
}

h1,
h2 {
  font-weight: 300;
  line-height: 1.2;
}

p {
  margin: 0;
}

img {
  width: 100%;
}

/* Navbar */

.navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: #333;
  color: #fff;
  opacity: 0.8;
  width: 100%;
  height: 70px;
  position: fixed;
  top: 0px;
  padding: 0 30px;
  transition: 0.5s;
}

.navbar a {
  color: #fff;
  padding: 10px 20px;
  margin: 0 5px;
}

.navbar a:hover {
  border-bottom: #91a5b6 2px solid;
}

.navbar ul {
  display: flex;
}

.navbar .logo {
  font-weight: 400;
}

.navbar.top {
  background: transparent;
}

#navbar{
  z-index: 11;
}

/* Header */

.hero {
  background: url('img/hero.jpg') no-repeat center center/cover;
  height: 100vh;
  position: relative;
  color: #fff;
  clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 50% 100%, 0 90%);
}

.hero .content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  height: 100%;
  padding: 0 20px;
}

.hero .content h1 {
  font-size: 55px;
}

.hero .content p {
  font-size: 23px;
  max-width: 600px;
  margin: 20px 0 30px;
}

.hero::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.6);
}

.hero * {
  z-index: 10;
}

.hero.blog {
  background: url('https://jawaragordon.com/img/hero.jpg') no-repeat center center/cover;
  height: 40vh;
}

.video-wrapper {
  position: relative;
  padding-bottom: 56.25%;
  height: 0;
}

.video-wrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

/* Icons */

.icons {
  padding: 30px;
}

.icons h3 {
  font-weight: bold;
  margin-bottom: 15px;
}

.icons i {
  background-color: #91a5b6;
  color: #fff;
  padding: 1rem;
  border-radius: 50%;
  margin-bottom: 15px;
}

.cases img:hover {
  opacity: 0.7;
}

.project-logo {
  width: 30%;
}


/* modal */
.w3-modal-content{
  color: black;
  padding-top: 25vh;
  margin-top: 10vh !important;
  max-width: 600px;
}
.modal-header{
  color: #fff;
  background-color: #333;
}

.w3-modal{
  z-index: 24 !important;
}

.w3-button{
  border-radius: 20px;
}

.modal-icon-container{
  display: flex;
  flex-direction: row;
  align-content: space-around;
  justify-content: center;

}

.modal-icon{
  padding: .5rem 0;
  width: 20%;
}

.demo-login{
  border: 1px solid #000;
  border-radius: 10px;
  padding: 1rem;
  max-width: 33%;
  margin: auto;
}



/* Resize img w/ CSS 

.crop {
  
} */


.project-card1,
.project-card2,
.project-card3 {
  border: #f5f5f5f5 1px solid;
}

.blog-img {
  width: 70%;
  border-radius: 75%;
  flex-direction: column;
  margin: 0 auto 30px;
}

.team img {
  border-radius: 50%;
}

.callback-form {
  width: 100%;
  padding: 20px 0;
}

.callback-form label {
  display: block;
  margin-bottom: 5px;
}

.callback-form .form-control {
  margin-bottom: 15px;
}

.callback-form input {
  width: 100%;
  padding: 4px;
  height: 40px;
  border: #f5f5f5f5 1px solid;
}

.callback-form input:focus {
  outline-color: #91a5b6;
}

.callback-form .btn {
  padding: 12px 0;
  margin-top: 20px;
}

/*post*/
.post {
  padding: 50px 30px;
}

.post h2 {
  font-size: 40px;
  margin-bottom: 20px;
  padding-bottom: 10px;
  border-bottom: #ccc solid 1px;
}

.post .meta {
  margin-bottom: 30px;
}

.post img {
  width: 300px;
  border-radius: 75%;
  display: block;
  margin: 0 auto 30px;
}

.post .text {
  font-size: 20px;
}

/*footer*/
.footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  height: 200px;
}

.footer a {
  color: #fff;
}

.footer a:hover {
  color: #2867c3;
}

.footer .social > * {
  margin-right: 30px;
}

/* Mobile */
@media (max-width: 766px) {
  .navbar {
    flex-direction: column;
    height: 120px;
    padding: 20px;
  }

  .navbar a {
    padding: 10px 10px;
    margin: 0 3px;
  }

  .content img{
    margin-top: 5rem;
  }

  .flex-items {
    flex-direction: column;

  }

  .blog-img {
    width: 50%;
    border-radius: 75%;
    display: block;
    /* margin: 0 auto 30px; */
  }

  .icon-img{
    width: 200px;
  border-radius: 75%;
  display: flex;
  flex-direction: column;
  margin: 0 auto 30px;
  }


  .flex-columns .column,
  .flex-grid .column {
    flex: 100%;
    max-width: 100%;
    
  }

  .team .img {
    width: 70%;
  }
}
@media (max-width: 375px) {


  .navbar {
    flex-direction: column;
    height: 120px;
    padding: 20px;
  }

  .navbar a {
    padding: 10px 10px;
    margin: 0 3px;
  }

  .content img{
    margin-top: 5rem;
  }

  .flex-items {
    flex-direction: column;

  }

  .blog-img {
    width: 50%;
    border-radius: 75%;
    display: block;
    /* margin: 0 auto 30px; */
  }

  .icon-img{
    width: 200px;
  border-radius: 75%;
  display: block;
  margin: 0 auto 30px;
  }

  .flex-columns .column,
  .flex-grid .column {
    flex: 100%;
    max-width: 100%;
    
  }

  .team .img {
    width: 70%;
  }
}

